fix flex gaps

--- a/src/scss/components/_comments.scss
+++ b/src/scss/components/_comments.scss
@@ -1,12 +1,16 @@
-.comments {
-  margin-bottom: 1.25rem;
-}
-
 .comments,
 .replies {
   display: flex;
   flex-direction: column;
-  gap: 1.125rem;
+}
+
+.comments {
+  margin-bottom: 1.25rem;
+  gap: 1.25rem;
+}
+
+.replies {
+  gap: 1.5rem;
 }
 
 .replies-container {
